ingress/nginx/myapp_example/svc-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp
    release: canary
#  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
