ingress/nginx/myapp_example/ing-myapp-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - zhouhua.myapp.com
    secretName: myapp-ingress-secret
  rules:
  - host: zhouhua.myapp.com
    http:
      paths:
      - path:
        backend:
          serviceName: myapp
          servicePort: 80
